# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import authRouter, { usersRouter } from "./auth";
 import deliveriesRouter from "./deliveries";
 import settingsRouter from "./settings";
+import storageRouter from "./storage";
 
 const router: IRouter = Router();
 
@@ -11,5 +12,6 @@ router.use("/auth", authRouter);
 router.use("/users", usersRouter);
 router.use("/deliveries", deliveriesRouter);
 router.use("/settings", settingsRouter);
+router.use(storageRouter);
 
 export default router;
